/*
 * $Id: ChangeLog,v 1.1565 2003/10/08 06:59:28 peterrees Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-10-08 08:55 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/tprinter.c
    * casts for msvc karma

2003-10-08 20:00 GMT+1200 Peter Rees <peter@rees.co.nz>
  * /rtl/tprint.c
    rename THarbourPrinter_DPGetDefaultPrinter() hb_GetDefaultPrinter()

  * set.c
    rename THarbourPrinter_DPGetDefaultPrinter() hb_GetDefaultPrinter()

  * /rtl/tprinter.c
    + Added
      PRINTFILERAW()
      hb_PrintFileRaw()
      Rewrite GETPRINTERS()
        GETPRINTERS() returns 1D list of printer names GETPRINTERS(.T.) 2d printername,portname


  * /rtl/isprint.c
      Moved to tprinter.c
        HB_FUNC(PRINTERPORTTONAME)
        HB_FUNC(GETPRINTERS)
      Rewrite all function and test on Win98,2000,2000 Server, XP Pro
      Replace malloc()/free() with hb_x..(), fix memory leak

2003-10-07 16:47 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/classes.h
  * include/hbvm.h
  * source/vm/classes.c
  * source/vm/hvm.c
    + Added missing HB_EXPORT

  * tests/tstcstru.prg
    + Added:
      #define HB_NO_DEFAULT_API_MACROS
      #define HB_NO_DEFAULT_STACK_MACROS
    * Removed direct HB_VM_STACK.Return access in favor of hb_retclenAdoptRaw() EXTEND API.
      /* Sample can now be used with DLL R/T. */

  /*
     We need to make sure that our samples do NOT "teach" direct access to HB_VM_STACK (or worse hb_stack).
   */

2003-10-07 18:20 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source\rtl gtapi.c
  * source\rtl mouseapi.c
  * include/hbapigt.h
    * HB_EXPORT on the missing functions.

2003-10-07 15:13 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/set.c
    * Modified set_logical() to receive a 2nd param (the default value).